--- a/charts/graph/templates/graph/base.html
+++ b/charts/graph/templates/graph/base.html
@@ -31,6 +31,9 @@
                 <li class="nav-item {% if nbar == 'about' %}active{% endif %}">
                     <a class="nav-link" href="/clinicaldata/">Clinical Trial Data Chart</a>
                 </li>
+                <li class="nav-item {% if nbar == 'about' %}active{% endif %}">
+                    <a class="nav-link" href="/jointdata/">Joint Data Chart</a>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="nav-item">
@@ -44,8 +47,10 @@
     </div>
   {% block scripts %}
   {% endblock scripts %}
-
-  {% block content %}
+    <div class="container">
+        {% block content %}
   {% endblock content %}
+    </div>
+
   </body>
 </html>
